# practice-project

./: .gitignore.txt  CMakeLists.txt  main_test_terminal.cpp
include/: Block.h  ParkingLot.h  ParkingLotPrinter.h  ParkingLotTypes.h  ParkingSpot.h
include/Vehicle_Types_Include/: car.h  handicapped.h  motorbike.h  vehicle.h
source/: Block.cpp  MtmParkingLot.cpp  ParkingLot.cpp  ParkingLotPrinter.cpp  ParkingSpot.cpp  Time.cpp
source/Vehicle_Types_Source/: car.cpp  handicapped.cpp  motorbike.cpp  vehicle.cpp
tests/: final_check.py
tests/grade_tests/: ParkingLotPrinter.cpp  ParkingLotTest.cpp  ParkingSpot.cpp  README.txt  Time.h  UniqueArrayTest.cpp
tests/input/: input1.txt  input2.txt  input3.txt
tests/output/: output1.txt  output2.txt  output3.txt
